--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,4 +48,11 @@ jobs:
     inputs:
       command: test
       projects: '**/*Test/*.csproj'
-      arguments: '--configuration $(buildConfiguration)'
+      arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
+
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: publish
+      publishWebProjects: True
+      arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+      zipAfterPublish: True
