Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,7 @@ jobs:
       arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
 
   - task: DotNetCoreCLI@2
+    displayName: Deploy
     inputs:
       command: publish
       publishWebProjects: True
