--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,9 +15,27 @@ jobs:
     vmImage: 'ubuntu-latest'
 
   steps:
+  - task: SonarCloudPrepare@1
+    displayName: sonarcloud prepare analysis
+    inputs:
+      SonarCloud: 'sonarcloud nfuntanilla'
+      organization: '2006-jun15-net'
+      scannerMode: 'MSBuild'
+      projectKey: '2006-jun15-net_noah-project1'
+      projectName: 'Noah project 1 StoreApp'
+
   - script: dotnet build -c Release
     displayName: dotnet build
     workingDirectory: $(solutionPath)
+
+  - task: SonarCloudAnalyze@1
+    displayName: sonarcloud run analysis
+
+  - task: SonarCloudPublish@1
+    displayName: sonarcloud publish
+    inputs:
+      pollingTimeoutSec: '300'
+
   - task: DotNetCoreCLI@2
     displayName: dotnet test
     inputs:
@@ -26,6 +44,7 @@ jobs:
       publishTestResults: true
       projects: '$(solutionPath)/StoreApp.Test/*.csproj'
       testRunTitle: 'ubuntu'
+      
   - task: PublishCodeCoverageResults@1
     displayName: 'Publish code coverage report'
     inputs:
