--- a/StoreApp/StoreApp.Test/StoreApp.Test.csproj
+++ b/StoreApp/StoreApp.Test/StoreApp.Test.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.14.5" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
@@ -24,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StoreApp.Library\StoreApp.Library.csproj" />
+    <ProjectReference Include="..\StoreApp.WebApp\StoreApp.WebApp.csproj" />
   </ItemGroup>
 
 </Project>
